# mmr

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Architecture.md  CLAUDE.md  Cargo.toml  README.md  justfile
.agents/: conversation_history.json
.flox/: env.json
.well-known/: agents.json
adrs/: 001-optional-source-and-project-filters.md  002-cwd-scoped-defaults.md  003-memory-fabric-mvp-architecture.md  004-reverse-session-selection.md
agent/: overview.md  retrieve.md
docs/: cli-workflows.md  mmr-claude-importer.md  mmr-codex-importer.md  mmr-command-taxonomy.md  mmr-cursor-importer.md  mmr-dream-runner.md  mmr-memory-fabric-mvp.md  mmr-memory-fabric-progress.md  mmr-memory-fabric-quickstart.md  mmr-memory-fabric-release-gate.md  mmr-memory-fabric-store.md  mmr-note.md  mmr-redaction.md  mmr-search.md  mmr-session-sharing-validation.md  mmr-session-sharing.md  mmr-source-adapters.md  mmr-teleport-validation.md  mmr-teleport.md
goals/: 2026-05-29-reverse-session-selection.md  2026-05-30-adversarial-review-mmr-prior-session-workflow-mining-skill.md  2026-05-30-adversarial-review-of-mmr-prior-session-workflow-mining-skill.md  2026-05-30-claude-prior-session.json  2026-05-30-competitive-feature-research.md  2026-05-30-create-archive-for-goal-artifacts.md  2026-05-30-external-claude-review-of-session-mining-skill.md  2026-05-30-generalize-session-mining-subskill.md  2026-05-30-project-portable-message-defaults.md  2026-05-30-restructure-mmr-skill-as-parent-with-subskill.md  2026-05-30-retrieve-claude-prior-session-consolidate-workflows-skills.md  2026-05-31-api-compatible-summarizer.md  2026-05-31-breaking-command-taxonomy-proposal.md  2026-05-31-cargo-install-public-repo.md  2026-05-31-consolidate-mmr-command-abstractions.md  2026-05-31-dream-prompt-runbook.md  2026-05-31-expose-mmr-skill-command.md  2026-05-31-messages-default-behavior-investigation.md  2026-05-31-messages-default-ux-assessment.md  2026-05-31-mmr-mcp-server.md  2026-05-31-project-alias-resolution.md  2026-05-31-project-rule-commit-push-after-goals.md  2026-06-01-add-gemini-opencode-copilot-source-adapters.md  2026-06-01-add-local-activity-recap.md  2026-06-01-add-mmr-doctor-diagnostics.md  2026-06-01-add-mmr-explain.md  2026-06-01-consolidate-context-command-noise.md  2026-06-01-declare-git-checkpoint-non-goals.md  (+26 more)
src/: cli.rs  (+12 more)
(+176 files in other folders)
