[package]
name = "mmr"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
codex-app-server-sdk = "0.5.1"
colored = "3.1.1"
dirs = "6.0.0"
rayon = "1.11.0"
regex = "1.12.2"
reqwest = { version = "0.13.2", features = ["json"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
time = { version = "0.3.44", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1.50.0", features = ["full"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.26.0"
